# hist-peak-detector

./: CMakeLists.txt  README.md  REPORT.md
docs/latex/: M335.bib  main.tex
hist-peaks/: CMakeLists.txt  DominantPeakFinder.cpp  DominantPeakFinder.h  main.cpp
